Some code review fixes